juice: init: Disable native stats collection service
When opening and closing activities in Settings, a measurably
significant amount of CPU time is spent processing and logging stats
events in statsd:

0.02%     /apex/com.android.os.statsd/lib64/libstatspull.so                                                                                         @plt
0.01%     /apex/com.android.os.statsd/bin/statsd                                                                                                    @plt
0.01%     /apex/com.android.os.statsd/bin/statsd                                                                                                    SocketListener::runListener()
0.01%     /apex/com.android.os.statsd/bin/statsd                                                                                                    android::os::statsd::LogEvent::parseBuffer(unsigned char*, unsigned long)
0.01%     /apex/com.android.os.statsd/bin/statsd                                                                                                    android::os::statsd::LogEvent::parseAnnotations(unsigned char, int)

Over longer device uptimes with real-world usage, statsd uses a
substantial amount of total CPU time. We have no use for the stats
recorded by statsd, so disable the service entirely to save CPU in
potential hotpaths.

Test: simpleperf record -a; verify that statsd no longer appears in
      sample hits

Change-Id: Idf6fdb0eff987169bd5f370dd72315e831a669e6
Signed-off-by: Richard Raya <rdxzv.dev@gmail.com>
Signed-off-by: chrisl7 <wandersonrodriguesf1@gmail.com>

--- a/init/init.juice.perf.rc
+++ b/init/init.juice.perf.rc
@@ -65,6 +65,9 @@ on property:vendor.post_boot.parsed=1
     write /sys/module/cpu_boost/parameters/powerkey_input_boost_freq "0:1804800 1:0 2:0 3:0 4:2016000 5:0 6:0 7:0"
     write /sys/module/cpu_boost/parameters/powerkey_input_boost_ms 750
 
+    # Disable native stats collection service
+    stop statsd
+
     # Configure scheduler
     write /proc/sys/kernel/sched_child_runs_first 1
     write /proc/sys/kernel/sched_tunable_scaling 1
