juice: wifi: Update wifi Settings from sapphiren V14.0.3.0.TNHEUXM
Change-Id: I2e70901033622c1e7f2e4155a7580bf169a10924
Signed-off-by: chrisl7 <wandersonrodriguesf1@gmail.com>

--- a/configs/wlan/WCNSS_qcom_cfg.ini
+++ b/configs/wlan/WCNSS_qcom_cfg.ini
@@ -1,6 +1,10 @@
 # This file allows user to override the factory
 # defaults for the WLAN Driver
 
+#Allow WIFI DFS & LTE coexist
+g_sta_sap_scc_on_lte_coex_chan=1
+g_nan_sap_scc_on_lte_coex_chan=1
+
 # Enable IMPS or not
 gEnableImps=1
 
@@ -34,19 +38,19 @@ gAddTSWhenACMIsOff=1
 # 2: Filter all Broadcast. 3: Filter all Mcast abd Bcast
 McastBcastFilter=3
 
-# Flag to enable HostARPOffload feature or not
+#Flag to enable HostARPOffload feature or not
 hostArpOffload=1
 
-# Flag to enable HostNSOffload feature or not
+#Flag to enable HostNSOffload feature or not
 hostNSOffload=1
 
 # 802.11n Protection flag
 gEnableApProt=1
 
-# Enable OBSS protection
+#Enable OBSS protection
 gEnableApOBSSProt=1
 
-# Enable/Disable UAPSD for SoftAP
+#Enable/Disable UAPSD for SoftAP
 gEnableApUapsd=1
 
 # Fixed Rate
@@ -97,65 +101,6 @@ FastRoamEnabled=1
 # use this value as to how better the RSSI of the new/roamable AP should
 # be for roaming
 RoamRssiDiff=5
-
-# Sets RSSI preference for 5GHz over 2.4GHz AP
-gSelect5GHzMargin=5
-
-# RSSI threshold offset for 2G to 5G roam
-roam_bad_rssi_thresh_offset_2g=0
-
-# RSSI threshold for background roam
-roam_bg_scan_bad_rssi_thresh=-76
-
-# Enable or disable modulated DTIM feature (Default: 0).
-# 0 - Disable modulated DTIM.
-# 1 to 5 - The maximum No. of modulated DTIM period used
-# for calculating the target listen interval.
-gEnableModulatedDTIM=3
-
-# Set the MaxLIModulatedDTIM (Default: 10).
-gMaxLIModulatedDTIM=6
-
-# groam_dense_rssi_thresh_offset - Sets dense roam RSSI threshold diff
-groam_dense_rssi_thresh_offset=5
-
-# Dense traffic threshold in kBps
-gtraffic_threshold=50
-
-# Set beacon missed count threshold
-# if beacon missed counter > gRoamBmissFirstBcnt+gRoamBmissFinalBcnt,
-# heartbeat error triggered
-gRoamBmissFirstBcnt=10
-gRoamBmissFinalBcnt=20
-
-# To enabled/disable PER based roaming in FW
-# 0: disabled
-# 1: enabled for Rx traffic
-# 2: enabled for Tx traffic
-# 3: enabled for Tx and Rx traffic
-gper_roam_enabled=3
-
-# arp_ac_category - ARP access category
-# Firmware by default categorizes ARP packets with VOICE TID.
-# WME_AC_BE = 0 (Best effort)
-# WME_AC_BK = 1 (Background)
-# WME_AC_VI = 2 (Video)
-# WME_AC_VO = 3 (Voice)
-arp_ac_category=0
-
-# Enable/Disable DTIM Synth
-# 1- Enable DTIM Synth
-# 0- Disable DTIM Synth
-gEnableLPRx=0
-
-# Enable host side recovery
-gEnableSelfRecovery=1
-
-# enable/disable FT open feature
-enable_ftopen=0
-
-# Enable ETSI SRD channels by Xiaomi. Qualcom default value is disable
-etsi13_srd_chan_in_master_mode=1
 
 # To enable, set gRoamIntraBand=1 (Roaming within band)
 # To disable, set gRoamIntraBand=0 (Roaming across band)
@@ -238,15 +183,6 @@ gActiveMinChannelTime=20
 #If set to 0, MCC is not allowed.
 gEnableMCCMode=1
 
-# MCC to SCC Switch mode:
-# 0-Disable
-# 1-Enable
-# 2-Force SCC if same band, with SAP restart
-# 3-Force SCC if same band, without SAP restart by sending (E)CSA
-# 4-Force SCC if same band (or) use SAP mandatory channel for DBS,
-#   without SAP restart by sending (E)CSA
-gWlanMccToSccSwitchMode = 3
-
 # 1=enable STBC; 0=disable STBC
 gEnableRXSTBC=1
 
@@ -279,7 +215,7 @@ gMaxMediumTime = 6000
 gRrmEnable=1
 
 #Enable Power Save offload
-gEnablePowerSaveOffload=2
+gEnablePowerSaveOffload=4
 
 #Enable firmware uart print
 gEnablefwprint=0
@@ -324,6 +260,9 @@ gEnableOverLapCh=0
 
 #Enable VHT on 2.4Ghz
 gEnableVhtFor24GHzBand=1
+
+#Disable 40M on 2.4g
+gChannelBondingMode24GHz=0
 
 #Maximum number of offload peers supported
 # gMaxOffloadPeers=2
@@ -422,11 +361,9 @@ gVhtTxMCS=2
 # VHT Tx/Rx MCS values for 2x2
 # Valid values are 0,1,2. If commented out, the default value is 0.
 # 0=MCS0-7, 1=MCS0-8, 2=MCS0-9
-#Modify close MIMO for HQ-96394 by HQ-lvchangrui begin
-gEnable2x2=0
-#gVhtRxMCS2x2=2
-#gVhtTxMCS2x2=2
-#Modify close MIMO for HQ-96394 by HQ-lvchangrui end
+gEnable2x2=1
+gVhtRxMCS2x2=2
+gVhtTxMCS2x2=2
 
 #IPA config is a bit mask and following are the configurations.
 #bit0 IPA Enable
@@ -486,10 +423,6 @@ ce_service_max_rx_ind_flush=1
 # Maximum number of MSDUs the firmware will pack in one HTT_T2H_MSG_TYPE_RX_IN_ORD_PADDR_IND
 maxMSDUsPerRxInd=8
 
-# Enable NUD tracking feature
-# 1 - enable 0 - disable(default)
-gEnableNUDTracking=2
-
 # Enable PEER UNMAP CONF SUPPORT
 # 1 - enable 0 - disable(default)
 gEnablePeerUnmapConfSupport=1
@@ -506,8 +439,6 @@ genable_nan_datapath=1
 
 ################ NAN feature set end #####################
 
-adaptive_dwell_mode_enabled=1
-
 hostscan_adaptive_dwell_mode=1
 
 adapt_dwell_lpf_weight=80
@@ -519,23 +450,73 @@ MAWCEnabled=0
 # Enable/Disable rtt sta mac randomization
 enable_rtt_mac_randomization=1
 
-# Enable/Disable SNR monitoring
+#Enable/Disable SNR monitoring
 gEnableSNRMonitoring=0
 
 #Enable/Disable Ring Buffer
-gEnableRingBuffer=0
+gEnableRingBuffer=1
 
 # Packet Log buffer size
 PktlogBufSize=1
 
+active_max_channel_time_2g=40
+
+# Enable Keep alive with non-zero period value
+gStaKeepAlivePeriod = 30
+
 # Disable rx wakelock
 rx_wakelock_timeout=0
 
-# Allow STA+SAP SCC on DFS channel with master mode support disabled
-g_sta_sap_scc_on_dfs_chan=1
+#####################################Xiaomi ADD: START
 
-active_max_channel_time_2g=40
+adaptive_dwell_mode_enabled=1
 
+# MCC to SCC Switch mode:
+# 0-Disable
+# 1-Enable
+# 2-Force SCC if same band, with SAP restart
+# 3-Force SCC if same band, without SAP restart by sending (E)CSA
+# 4-Force SCC if same band (or) use SAP mandatory channel for DBS,
+#   without SAP restart by sending (E)CSA
+gWlanMccToSccSwitchMode = 3
+
+# Enable NUD tracking feature
+# 1 - enable 0 - disable(default)
+gEnableNUDTracking=2
+
+gSelect5GHzMargin=5
+roam_bad_rssi_thresh_offset_2g=0
+roam_bg_scan_bad_rssi_thresh=-76
+gEnableModulatedDTIM=3
+gMaxLIModulatedDTIM=6
+groam_dense_rssi_thresh_offset=5
+gtraffic_threshold=50
+gRoamBmissFirstBcnt=10
+gRoamBmissFinalBcnt=20
+gper_roam_enabled=3
+arp_ac_category=0
+gEnableLPRx=0
+gEnableSelfRecovery=1
+enable_ftopen=0
+
+# add Obtain the maximum link speed
+gReportMaxLinkSpeed=2
+
+# add Allow single SAP (GO) start on DFS channel
+g_sta_sap_scc_on_dfs_chan=2
+
+#Enable sap in indoor channel
+gindoor_channel_support=1
+
+# enable SRD channel in etsi
+etsi13_srd_chan_in_master_mode=1
+
+gEnableFwrMemDump=0
+
+#APF: Android Packet Filter
+gActiveMcBcBpfMode=1
+
+#####################################Xiaomi ADD: END
 END
 
 # Note: Configuration parser would not read anything past the END marker
